--- a/MoonCat/MoonCat/pageConfirmPay.xaml
+++ b/MoonCat/MoonCat/pageConfirmPay.xaml
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MoonCat.ConfirmPayPage"
-             BindingContext="MoonCat.ConfirmPayPage">
+             x:Class="MoonCat.ConfirmPayPage">
     <ContentPage.Content>
         <StackLayout Padding="10">
             <StackLayout x:Name="slMovieInfo"
@@ -31,8 +30,8 @@
             <Label x:Name="lbSeat"
                    Text="Hàng ghế: "/>
             <Label Text="{Binding total, StringFormat='Tổng tiền: {0}'}"/>
-            <Grid HorizontalOptions="CenterAndExpand"
-                  VerticalOptions="End">
+            <Grid HorizontalOptions="End"
+                  VerticalOptions="EndAndExpand">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
