--- a/MoonCat/MoonCat/pageSeatMovieShowing.xaml
+++ b/MoonCat/MoonCat/pageSeatMovieShowing.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MoonCat.SeatMovieShowingPage">
+             x:Class="MoonCat.SeatMovieShowingPage"
+             Title="Danh sách chỗ ngồi">
     <ContentPage.ToolbarItems>
         <ToolbarItem x:Name="btnPay"
                      Text="Thanh toán"
