--- a/MoonCat/MoonCat/pageSeatMovieShowing.xaml
+++ b/MoonCat/MoonCat/pageSeatMovieShowing.xaml
@@ -17,7 +17,7 @@
                    BackgroundColor="DimGray"
                    FontAttributes="Bold"
                    HorizontalOptions="FillAndExpand"
-                   HeightRequest="100"/>
+                   HeightRequest="150"/>
             <ScrollView>
                 <Grid x:Name="grid">
                     <Grid.ColumnDefinitions>
@@ -28,6 +28,20 @@
                     </Grid.RowDefinitions>
                 </Grid>
             </ScrollView>
+            <StackLayout Orientation="Horizontal"
+                         BackgroundColor="#249ACF"
+                         VerticalOptions="End"
+                         HeightRequest="60"
+                         Padding="10">
+                <Label Text="Tổng tiền: "
+                       FontSize="Medium"
+                       FontAttributes="Bold"
+                       VerticalOptions="Center"/>
+                <Label x:Name="lbCount"
+                       FontSize="Medium"
+                       FontAttributes="Bold"
+                       VerticalOptions="Center"/>
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
