--- a/MoonCat/MoonCat/pageConfirmPay.xaml
+++ b/MoonCat/MoonCat/pageConfirmPay.xaml
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MoonCat.ConfirmPayPage">
+             x:Class="MoonCat.ConfirmPayPage"
+             NavigationPage.HasBackButton="False">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem IconImageSource="close.png"
+                     Clicked="Close_Clicked"/>
+    </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout Padding="10">
             <StackLayout x:Name="slMovieInfo"
