--- a/MoonCat/MoonCat/pageE-Banking.xaml
+++ b/MoonCat/MoonCat/pageE-Banking.xaml
@@ -4,12 +4,26 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="MoonCat.E_BankingPage">
+             x:Class="MoonCat.E_BankingPage"
+             Title="Danh sách ngân hàng">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <CollectionView x:Name="cvBank"
+                            SelectionMode="Single"
+                            SelectionChanged="CvBank_SelectionChanged">
+                <CollectionView.ItemsLayout>
+                    <GridItemsLayout Span="2" Orientation="Vertical"/>
+                </CollectionView.ItemsLayout>
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <StackLayout Padding="10">
+                            <Image Source="{Binding Logo}"
+                                   HeightRequest="100"
+                                   Aspect="Fill"/>
+                        </StackLayout>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
